--- a/faq.qmd
+++ b/faq.qmd
@@ -30,7 +30,7 @@ Writing in plain text may seem odd at first, and it confronts the beginner with 
 There are many reasons why you might want to use a programming language for data analysis and visualization instead of spreadsheets or a GUI (graphical user interface) program, but first it is worth conceding that learning and using a programming language has a much steeper learning curve than the GUI alternatives. Nevertheless, this course argues that it is worth the effort. Benefits include:
 
 - **Reproducibility**: With a programming language you can document your analysis in a script that can be reproduced by others. This is not possible with a point-and-click interface of a GUI application or a spreadsheet. [Excel error](https://www.marketplace.org/2013/04/17/economy/excel-mistake-heard-round-world/) due to miss-clicking are well known.
-- **Separation of data and analysis**: In a spreadsheet your data and your analysis are done in the same place. This can make it easy to unknowingly introduce errors into your data. With a programming language all analysis is done on a copy of the data, making it easier to ensure the data is correct.
+- **Separation of data and analysis**: In a spreadsheet your data and your analysis are done in the same place. This can make it easy to unknowingly introduce errors into your data. With a programming language all analysis is done on a copy of the data, making it easier to ensure the data is correct. This also has the benefit that you can can make mistakes in your data analysis with a programming language without consequence. If you run into problems, get an error, or mess something up, it is ok. Your data remains safe and sound just as you left it.
 **You are in charge**: Spreadsheets often try to guess the formatting of data, which is another source of errors. Such errors are common, especially in dealing with dates. Scientists even had to [rename a gene](https://www.theverge.com/2020/8/6/21355674/human-genes-rename-microsoft-excel-misreading-dates) to deal with the issue. For historians, the fact that Excel does not natively support dates before 1900. With a programming language you have much greater control.
 
 ## Why are we learning R in this course? Why not Python? {#sec-python}
